Updated the contact info

--- a/index.html
+++ b/index.html
@@ -480,11 +480,20 @@
                         </div>
                         <div class="contact-item">
                             <div class="left">
-                                <i class="fa-solid fa-envelope"></i>
+                                <!-- <i class="fa-solid fa-envelope"></i> -->
+                                <a href="https://www.linkedin.com/in/sumitgirwal/" target="_blank">
+                                    <i class="fa-brands fa-linkedin"></i>
+                                </a>
                             </div>
                             <div class="right">
-                                <p class="right-title">Email</p>
-                                <p class="right-subtitle">xyzabc@gmail.com</p>
+                                <!-- <p class="right-title">Email</p>
+                                <p class="right-subtitle">xyzabc@gmail.com</p> -->
+                                <p class="right-title">Linkedin</p>
+                                <p class="right-subtitle">
+                                    <a href="https://www.linkedin.com/in/sumitgirwal/" target="_blank">
+                                       Say, Hi 👋
+                                    </a>
+                                </p>
                             </div>
                         </div>
                     </div>
