Updated images and styles

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sumit Girwal | DevSumitG</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/media-style.css">
     <link id="theme-style" rel="stylesheet" type="text/css" href="">
 </head>
 
@@ -20,9 +22,9 @@
         </a>
         <ul class="nav-item">
             <li class="nav-item-link"><a href="#introduction">Home</a></li>
-            <li><a href="#about-section">About</a></li>
-            <li><a href="#project-section">Projects</a></li>
-            <li><a href="#contact-section">Contact</a></li>
+            <li class="nav-item-link"><a href="#about-section">About</a></li>
+            <li class="nav-item-link"><a href="#project-section">Projects</a></li>
+            <li class="nav-item-link"><a href="#contact-section">Contact</a></li>
             
         </ul>
     </nav>
@@ -57,12 +59,12 @@
                     </div>
                     <div class="my-theme">
                         <h5>Personalize Theme</h5>
-                        <p id="settings-note">*Theme settings will be saved for your next vist</p>
+                        <p id="settings-note">*Theme settings will be saved for your next visit</p>
                         <div id="theme-options-wrapper">
                             <div data-mode="light" id="light-mode" class="theme-dot"></div>
                             <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
-                            <div data-mode="green" id="green-mode" class="theme-dot"></div>
-                            <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
+                            <!-- <div data-mode="green" id="green-mode" class="theme-dot"></div>
+                            <div data-mode="purple" id="purple-mode" class="theme-dot"></div> -->
                         </div>
                     </div>
                 </div>
@@ -86,7 +88,7 @@
             <div class="container">
                 <div class="about">
                     <div class="about-img">
-                        <img src="./assets/images/avatar.png" alt="About Image">
+                        <img src="/assets/images/avatar.webp" alt="About Image">
                     </div>
                     <div class="about-detail">
                         <div class="section-heading">
