--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="stylesheet" href="./assets/css/media-style.css">
     <link id="theme-style" rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" href="./assets/css/media-queries.css">
 </head>
 
 <body>
