Added basic scroll on the card img

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="card">
                         <div class="col-1">
                             <a href="https://github.com/sumitgirwal/ProCoder-Public" target="_blank">
-                                <img src="assets/images/procoder.png" alt="ProCoder">
+                                <img src="assets/images/one.png" alt="ProCoder">
                             </a>
                         </div>
                         <div class="col-2">
